<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Miscellaneous strings. -->
    
    <string name="app_name">Project</string>
    <string name="action_settings">Settings</string>
    <string name="books">Check Books</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="frlitt">Littérature Française</string>
    
    <string name="thriller">Thriller</string>
    <string name="detective">Policier</string>
    <string name="fantastic">Fantastique</string>
    <string name="sf">Science-fiction</string>
    <string name="educative">Educatif</string>
    
    <string name="politic">Politique</string>
    <string name="romantic">Romantique</string>
    <string name="horror">Horreur</string>
    <string name="historical">Historique</string>
    <string name="encyclopedia">Encyclopédie</string>
	
    <string name="others">Others</string>
    <string name="book_not_found">No book matched the criteria</string>
</resources>
